finishing of experimental

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -24,7 +24,6 @@
 %	often fail to cite the author of the original idea)
 %    historical review suggests formal unification of MM and PhC concepts, attempt for clarification of these two terms
 %  * filled the demand for some starting overview of the common structures
-%  * documented the original sieving apparatus
 %  * pointed out the fundamental problems: 
 %      1) losses in available materials, 
 %      2) excessive spatial dispersion in known structures; i.e. the eff-param spectra often 'stick' to the BZ boundary
@@ -38,6 +37,10 @@
 %	  2) by mathematical means, the phase-ambiguity of the retrieved effective index by the s-parameter method 
 %  * proposes a novel function for a wave source in FDTD that has a flat-top spectrum in a well-defined 
 %		interval of frequencies
+%  * we developed an original apparatus for accurate sieving
+%	 for the fabrication of sieves, we constructed a laser micro-machining setup in the laboratory, 
+%	 including an original electrical and software design of the motor controller (published online)
+%    and the auto-collimating setup for accurate beam focusing
 %  * We validated these FDTD computations against
 %     1) the H-bars spectra in the NumMet section
 %	  2) the Pendry's and Maslovski's models for f_p
