--- a/result.tex
+++ b/result.tex
@@ -234,9 +234,12 @@ While the change of the cut-wire radius $\rho_w$ relatively weakly reflects in t
 \end{tabular}
 \end{figure}
 
-
-
-
+\paragraph{Experimental measurement of cut wire spectra}
+\todo{origin of samples, semi-conductive si substrate, todo compute spectra, plot graphs and compare with experiment}
+\begin{figure}[ht] \caption{The sample of cut wires (pale yellow) on silicon (cyan) substrate. \textbf{(a)} Natural-colour photograph from an optical microscope,  \textbf{(b)} Geometry of the wires in micrometers. They were measured to be $6.5$ $\mu$m wide and $30$ $\mu$m long. The periodicity of cut-wires was $30\times 50$ $\mu$m.  } \label{fg_sieving2} \centering 
+	\begin{overpic}[height=.40\textwidth]{img/bousek_splitwires_microphoto.pdf}  \put(0,78) {\textbf{(a)}} \end{overpic}
+	\begin{overpic}[height=.40\textwidth]{img/bousek_splitwires_drawing.pdf}  \put(0,95) {\textbf{(b)}} \end{overpic}
+\end{figure}
 
 %====================================================================================================
 \section{Electric resonators} \label{section_esrr} % references to -> % note about plasmonic particles 
