--- a/result.tex
+++ b/result.tex
@@ -684,6 +684,7 @@ Standing SPP wave
 
 %====================================================================================================
 \section{Fishnet -- metallic sheet with holes} \label{section_fishnet} % references to ->
+%{{{
 %Aperture-array transmission
 %Wood anomaly in slit arrays
 %% TODO asymmetric cladding --> back reference to expe.tex:79
@@ -696,7 +697,6 @@ Standing SPP wave
 %surface plasmons, standing/propagating
 
 Perforated plates \cite[p. 58]{brown1953artificial} % http://photonics.inescporto.pt/links/fct2013-1/metap14.pdf
-%{{{
 \cite{yahiaoui2012metallo,rockstuhl2008light}
 
 The resonance in the metallic mesh has been used as a filter 
@@ -704,6 +704,12 @@ The resonance in the metallic mesh has been used as a filter
 ... has been known for half a century \cite{vogel1964transmission}
 
 Improved cross-shaped pattern for better spectral selectivity \cite{porterfield1994resonant}
+
+Let us note that our group received another fishnet sample made by automated mechanical drilling (Fig. \ref{fg_fishnet_mechanical}) into a . The sample was measured by the terahertz spectroscopy yielding relatively complicated spectra, which could not be reasonably matched by any of the simulations. We assume that the clash between the measured and simulated values comes from the imprecision in the sample itself, namely from the burrs due to 
+\begin{figure}[ht] \caption{A drilled fishnet with $500\times 500$ $\mu$m periodicity. The inclined view from the bottom side shows the burrs that were probably responsible for the large difference of the measured and simulated spectra.}  \centering \includegraphics[width=.8\textwidth]{img/fishnet.pdf} \label{fg_fishnet_mechanical} \end{figure}
+
+Part of the fishnets were made of two foils as a metal-insulator-metal structure, but their spectra were also hard to interpret.
+
 
 %}}}
 
