--- a/expe.tex
+++ b/expe.tex
@@ -224,24 +224,27 @@ A compact stepper motor controller of a custom design \cite{dominec2015_triostep
 
 %}}}
 \paragraph{Laser cutting issues}%{{{
-Metal vapors created by laser cutting immediately oxidise in the air. Although only few milligrams of the stainles steel foil were evaporated in total, the microscopic particles could gradually sediment on fine optics. We built a miniature ventilation and filtering system out of a tube filled with cotton wool and fine synthetic fibers. After few meshes were cut, the cotton changed its colour from white to pale brown, indicating that at least part of the particles were filtered out.
+Metal evaporated during the laser cutting immediately oxidises in the air. Although in total only few milligrams of the stainless steel foil were removed, the microscopic particles would pose a risk of damaging optical components. We built a miniature ventilation and filtering system out of a tube filled with cotton wool and fine synthetic fibers. After few meshes were cut, the cotton changed its colour from white to pale brown, indicating that at least part of the particles were filtered out.
 
-A greater challenge arose from thermal expansion of the foil. When a reasonable utilisation of the valuable laser beam time was desired, the speed of cutting was high enough to  %TODO XXX XXX
+A greater challenge arose from thermal expansion of the foil. In order to fully utilise of the valuable laser beam time, the speed of cutting was rather limited by the speed of stepper motors. The heat remaining in the mesh being made was high enough to cause its thermal expansion and bending out of the plane of its holder. Even though the resulting displacement was under 1 mm, the sheet moved significantly out of the beam focus. We assume this was the reason for slight variations between the hole sizes in Fig. \ref{fg_mesh}. The effect would be diminished through slower cutting speed or by gluing the foil to a (sacrificed) rigid substrate.
 
 %}}}
 \paragraph{Difference between the sieves and fishnets}%{{{
-The meshes had two purposes -- either as sieves used in the second sieving apparatus described above, or as metamaterial samples known as \textit{fishnets}, which are predicted to exhibit a negative index of refraction (see Sect. \ref{section_fishnet}). 
+The meshes were made two purposes -- either as sieves used in the second sieving apparatus described above, or as metamaterial samples known as \textit{fishnets}, which are predicted to exhibit a negative index of refraction (see Sect. \ref{section_fishnet}). The difference between these applications is subtle; the meshes intended as sieves would surely exhibit a resonance in the terahertz range. 
+
+Titanium dioxide spheres were prepared in the size range of 30--60 $\upmu$m, which determined the hole diameter of sieves. To maintain mechanical robustness, the periodicity in sieves was kept much larger than the diameter, usually $300\times 300$ $\upmu$m. 
+
+Fishnets had the same periodicity as sieves, but the holes did not have to be elliptical, and their dimensions were chosen between 150 and 280 $\upmu$m. Increasing the hole area leads to a broader frequency range of negative effective index of refraction, as shown in the Chapter \pageref{section_fishnet}. 
+
 % TODO
 %To achieve the required precision of sieving, we fabricated the sieves by femtosecond laser drilling of 20--30 $\upmu$m thick stainless steel steel foil
 %These sieves then were employed in a device that subjected the microsphere sample to acoustic vibrations, improving the speed of the demanding sieving process to acceptable level
 
-\begin{figure}[ht] \caption{Microscopic photographs of fishnets cut from a 20 $\mu$m thick stainless steel foil, \textbf{(a)} holes of $180\times 200$ $\mu$m,  \textbf{(b)} holes of $230\times 255$ $\mu$m, cut by a "z"-shaped movement of the beam. Periodicity of both fishnets is $300\times 300$ $\mu$m.  } \label{fg_sieving2} \centering 
+\begin{figure}[ht] \caption{Microscopic photographs of fishnets cut from a 20 $\mu$m thick stainless steel foil, \textbf{(a)} holes of $180\times 200$ $\mu$m,  \textbf{(b)} holes of $230\times 255$ $\mu$m, cut by a "z"-shaped movement of the beam. Periodicity of both fishnets is $300\times 300$ $\mu$m, real size of both photograps is $1.2\times 0.9$ mm.  } \label{fg_mesh} \centering 
 	\begin{overpic}[height=.35\textwidth]{img/fishnet-sample28a-180x200hole-300x300pitch.pdf}  \put(0,71) {\textbf{(a)}} \end{overpic}
 	\begin{overpic}[height=.35\textwidth]{img/fishnet-sample28c-230x255hole-300x300pitch.pdf}  \put(0,67) {\textbf{(b)}} \end{overpic}
 \end{figure}
 
-Let us note that our group received another fishnet sample made by automated mechanical drilling (Fig. \ref{fg_fishnet_mechanical}) into a . The sample was measured by the terahertz spectroscopy yielding relatively complicated spectra, which could not be reasonably matched by any of the simulations. We assume that the clash between the measured and simulated values comes from the imprecision in the sample itself, namely from the burrs due to 
-\begin{figure}[ht] \caption{A drilled fishnet with $500\times 500$ $\mu$m periodicity. The inclined view from the bottom side shows the burrs that were probably responsible for the large difference of the measured and simulated spectra.}  \centering \includegraphics[width=.8\textwidth]{img/fishnet.pdf} \label{fg_fishnet_mechanical} \end{figure}
 
 %}}}
 
